<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.seibelsabrina.sheltermefb.RegisterScreenActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/rootRL"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@drawable/shelly"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/spinnerRegisterMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerRegisterMode"></RelativeLayout>

    <TextView
        android:id="@+id/textViewRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRegisterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRegisterUsername" />

    <TextView
        android:id="@+id/textViewRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="31dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterUsername" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="73dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerRegisterMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextRegisterUsername" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="30dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewRegisterMode"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="56dp"
        android:text="Account Mode"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerRegisterMode"
        app:layout_constraintEnd_toEndOf="@+id/spinnerRegisterMode"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterPassword" />

    <Spinner
        android:id="@+id/spinnerRegisterMode"
        style="@android:style/Widget.Spinner"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="157dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="156dp"
        android:entries="@array/modes"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRegisterCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextRegisterUsername" />

    <Button
        android:id="@+id/buttonRegisterCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonRegister" />
</android.support.constraint.ConstraintLayout>
